<resources>
    <string name="app_name">MAD-105_User_Input4</string>
    <string name="txtTitle">Calculate restaurant tip</string>
    <string name="txtBill">Enter the cost from the check</string>
    <string name="txtCalculate">Calculate Tip</string>
    <string name="prompt">Select Tip %</string>
    <string name="percentNote">Tip Percent</string>
    <string-array name="txtGroup">
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
    </string-array>
</resources>